[tool.poetry]
name = "keum"
version = "0.2.0"
description = "Modular elliptic curve library implementation in Python for experimentations"
authors = ["Danny Willems <danny@badass.be>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/dannywillems/py-keum"
Issues = "https://github.com/dannywillems/py-keum/issues"

[tool.poetry.dependencies]
# For Self in typing
python = "^3.11"
sympy = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120

[tool.pytest.ini_options]
pythonpath = [
  "."
]
